--- a/ExerciseSubmissions/01_the-value-of-openness.ipynb
+++ b/ExerciseSubmissions/01_the-value-of-openness.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/RobJavVar/DataSciencePsychNeuro/blob/master/ExerciseSubmissions/01_the-value-of-openness.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -25,7 +25,7 @@
         "id": "awY8UZ_NmBJ7"
       },
       "source": [
-        "You first assignemnt is designed to get you setup and started with GitHub and Jupyter notebooks."
+        "You first assignemnt is designed to get you setup and started with GitHub and Jupyter notebooks. You can can choose to work with the materials on this course locally on your computer or entirely virtually via GitHub. I encourage people to work locally just because it makes it easier to rework code and you get experience working with these tools in a more realistic environment."
       ]
     },
     {
@@ -34,11 +34,12 @@
         "id": "-lSS1580mBJ8"
       },
       "source": [
-        "---\n",
-        "&nbsp; 1. Setup a GitHub account and create a new repository with the following name:\n",
         "\n",
-        "   * <your\\_last\\_name>\\_DSPN\\_S26\n",
-        "   * Add the users *coaxlab0* (that’s a zero at the end), *RobJavVar*, and the TA (*[Jinhee's GitHub]*) as collaborators.\n"
+        "&nbsp; 1. Setup a [GitHub account](https://github.com/). To work locally, [download](https://desktop.github.com/download/) the GitHub desktop client.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -47,7 +48,24 @@
         "id": "3Q6Kbu3pmBJ-"
       },
       "source": [
-        "&nbsp; 2. Clone the [class GitHub repository](https://github.com/RobJavVar/DataSciencePsychNeuro) locally on your computer:\n",
+        "Choose **either** 2a or 2b of the below options\n",
+        "\n",
+        "&nbsp; 2a. Clone the [class GitHub repository](https://github.com/RobJavVar/DataSciencePsychNeuro) locally on your computer using the GitHub Desktop client:\n",
+        "\n",
+        "<img src=\"https://raw.githubusercontent.com/RobJavVar/DSPN_CourseNotebook/main/book/exercises/imgs/Ex1_ghdesktop.png\" width=\"800\">\n",
+        "\n",
+        "<img src=\"https://raw.githubusercontent.com/RobJavVar/DSPN_CourseNotebook/main/book/exercises/imgs/Ex1_ghdesktop2.png\" width=\"800\">\n",
+        "\n",
+        "\n",
+        "<br><br><br>\n",
+        "\n",
+        "&nbsp; 2b. Clone the [class GitHub repository](https://github.com/RobJavVar/DataSciencePsychNeuro) onto your GitHub repo:\n",
+        "\n",
+        "<img src=\"https://raw.githubusercontent.com/RobJavVar/DSPN_CourseNotebook/main/book/exercises/imgs/Ex1_gh3.png\" width=\"800\">\n",
+        "\n",
+        "\n",
+        "   * Create a new repository with the following name: <your\\_last\\_name>\\_DSPN\\_S26\n",
+        "   * Add the users *coaxlab0* (that’s a zero at the end), *RobJavVar*, and the TA (*[Jinhee's GitHub]*) as collaborators OR have your repo be public.\n",
         "\n",
         "**Note:** This repository will be where you post your exercises and other assignments throughout the semester."
       ]
@@ -58,7 +76,11 @@
         "id": "kD51RpimmBJ_"
       },
       "source": [
-        "&nbsp; 3. Open this notebook in Collaboratory (use the rocket button above)\n"
+        "&nbsp; 3. Open this notebook:\n",
+        "\n",
+        "*   If you are working locally: open anaconda terminal -> type _jupyter notebook_ -> then navigate to Exercise 1 notebook (e.g., DataSciencePsychNeuro\\ExerciseSubmissions\\01_the-value-of-openness.ipynb) and double click \n",
+        "\n",
+        "*   If you are working using Google Colab on GitHub: Go to **your** cloned GitHub repo and navigate to the Exercise 1 notebook and open in Colab using the GoogleColab badge\n"
       ]
     },
     {
@@ -67,7 +89,7 @@
         "id": "BLQKBFQimBKB"
       },
       "source": [
-        "&nbsp; 4. Save the notebook either to your local computer or Google Drive, titled Homework1_HelloWorld.ipynb"
+        "&nbsp; 4. Save the notebook either to your local computer or your GitHub repo."
       ]
     },
     {
@@ -83,10 +105,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "Tmj96GJ9bRh_",
         "vscode": {
           "languageId": "plaintext"
-        },
-        "id": "Tmj96GJ9bRh_"
+        }
       },
       "outputs": [],
       "source": [
@@ -108,7 +130,7 @@
         "id": "Bv8bBSOTmBKE"
       },
       "source": [
-        "&nbsp; 7. Push your Jupyter notebook to the repository that you made on Github."
+        "&nbsp; 7. If local, push your Jupyter notebook to the repository that you made on Github. If working through colab, save over your existing file on GitHub from colab"
       ]
     },
     {
@@ -117,7 +139,10 @@
         "id": "bklyTlz6mBKG"
       },
       "source": [
-        "&nbsp; 8. Submit a link to the notebook via Canvas. This is how we will turn in all exercises this semester."
+        "&nbsp; 8. Submit a permalink to the notebook via Canvas. This is how we will turn in all exercises this semester.\n",
+        "\n",
+        "Here is an example of what it could look like: \n",
+        "https://github.com/RobJavVar/DataSciencePsychNeuro/blob/0159a56f2ab6d8f2b1b82f9f08abe85a75accd96/ExerciseSubmissions/01_the-value-of-openness.ipynb"
       ]
     },
     {
@@ -141,9 +166,9 @@
   ],
   "metadata": {
     "colab": {
+      "include_colab_link": true,
       "name": "Homework1.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "R",
