--- a/ExerciseSubmissions/01_the-value-of-openness.ipynb
+++ b/ExerciseSubmissions/01_the-value-of-openness.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/RobJavVar/DataSciencePsychNeuro/blob/master/ExerciseSubmissions/01_the-value-of-openness.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xwx-codingweb/XIA_DSPN_S26/blob/master/ExerciseSubmissions/01_the-value-of-openness.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -78,7 +78,7 @@
       "source": [
         "&nbsp; 3. Open this notebook:\n",
         "\n",
-        "*   If you are working locally: open anaconda terminal -> type _jupyter notebook_ -> then navigate to Exercise 1 notebook (e.g., DataSciencePsychNeuro\\ExerciseSubmissions\\01_the-value-of-openness.ipynb) and double click \n",
+        "*   If you are working locally: open anaconda terminal -> type _jupyter notebook_ -> then navigate to Exercise 1 notebook (e.g., DataSciencePsychNeuro\\ExerciseSubmissions\\01_the-value-of-openness.ipynb) and double click\n",
         "\n",
         "*   If you are working using Google Colab on GitHub: Go to **your** cloned GitHub repo and navigate to the Exercise 1 notebook and open in Colab using the GoogleColab badge\n"
       ]
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Tmj96GJ9bRh_",
         "vscode": {
@@ -103,7 +103,7 @@
       },
       "outputs": [],
       "source": [
-        "#\n"
+        "# Hello world!"
       ]
     },
     {
@@ -132,7 +132,7 @@
       "source": [
         "&nbsp; 7. Submit a permalink to the notebook via Canvas. This is how we will turn in all exercises this semester.\n",
         "\n",
-        "Here is an example of what it could look like: \n",
+        "Here is an example of what it could look like:\n",
         "https://github.com/RobJavVar/DataSciencePsychNeuro/blob/0159a56f2ab6d8f2b1b82f9f08abe85a75accd96/ExerciseSubmissions/01_the-value-of-openness.ipynb\n",
         "\n",
         "It doesn't have to be in this format as long as we can navigate to your notebook with the link."
@@ -159,9 +159,9 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
       "name": "Homework1.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "R",
