--- a/ExerciseSubmissions/02_models-as-testable-hypotheses.ipynb
+++ b/ExerciseSubmissions/02_models-as-testable-hypotheses.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/RobJavVar/DataSciencePsychNeuro/blob/master/ExerciseSubmissions/02_models-as-testable-hypotheses.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xwx-codingweb/XIA_DSPN_S26/blob/master/ExerciseSubmissions/02_models-as-testable-hypotheses.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -56,7 +56,16 @@
       },
       "outputs": [],
       "source": [
-        "#Write your function here\n"
+        "#Write your function here\n",
+        "stats_sum <- function(x) {\n",
+        "  x_clean <- x[!is.na(x)]\n",
+        "\n",
+        "  c (\n",
+        "    n = length(x_clean),\n",
+        "    mean = mean(x_clean),\n",
+        "    sd = sd(x_clean)\n",
+        "  )\n",
+        "}"
       ]
     },
     {
@@ -72,18 +81,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "vscode": {
           "languageId": "r"
         },
-        "id": "IPVhV-5rOL0Q"
+        "id": "IPVhV-5rOL0Q",
+        "outputId": "38bc3b42-8b7a-43f3-a2f8-a79976c322d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              ".dl-inline {width: auto; margin:0; padding: 0}\n",
+              ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
+              ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
+              ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
+              "</style><dl class=dl-inline><dt>n</dt><dd>4</dd><dt>mean</dt><dd>7.75</dd><dt>sd</dt><dd>2.75378527364305</dd></dl>\n"
+            ],
+            "text/markdown": "n\n:   4mean\n:   7.75sd\n:   2.75378527364305\n\n",
+            "text/latex": "\\begin{description*}\n\\item[n] 4\n\\item[mean] 7.75\n\\item[sd] 2.75378527364305\n\\end{description*}\n",
+            "text/plain": [
+              "       n     mean       sd \n",
+              "4.000000 7.750000 2.753785 "
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "v1  <- c(5, 11, 6, NA, 9)\n",
         "\n",
-        "#your_function_name(v1)"
+        "#your_function_name(v1)\n",
+        "stats_sum(v1)"
       ]
     },
     {
@@ -122,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -131,7 +167,12 @@
       },
       "outputs": [],
       "source": [
-        "# Write ttest_fun here\n"
+        "# Write ttest_fun here\n",
+        "\n",
+        "ttest_fun <- function(x, mu) {\n",
+        "  stats <- stats_sum(x)\n",
+        "  (stats[\"mean\"] - mu) / (stats[\"sd\"] / sqrt(stats[\"n\"]))\n",
+        "}\n"
       ]
     },
     {
@@ -145,14 +186,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "vscode": {
           "languageId": "r"
         },
-        "id": "O3D14FIfOL0R"
+        "id": "O3D14FIfOL0R",
+        "outputId": "cb9e9f91-4662-438a-a194-2d964b4505df",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<strong>mean:</strong> -1.63411433820577"
+            ],
+            "text/markdown": "**mean:** -1.63411433820577",
+            "text/latex": "\\textbf{mean:} -1.63411433820577",
+            "text/plain": [
+              "     mean \n",
+              "-1.634114 "
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "ttest_fun(v1, 10)"
       ]
@@ -171,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "vscode": {
           "languageId": "r"
@@ -180,19 +242,45 @@
       },
       "outputs": [],
       "source": [
-        "# Write your modified ttest_fun here\n"
+        "# Write your modified ttest_fun here\n",
+        "\n",
+        "ttest_fun <- function(x, mu=0) {\n",
+        "  stats <- stats_sum(x)\n",
+        "  (stats[\"mean\"] - mu) / (stats[\"sd\"] / sqrt(stats[\"n\"]))\n",
+        "}\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "vscode": {
           "languageId": "r"
         },
-        "id": "b2znPcVYOL0R"
+        "id": "b2znPcVYOL0R",
+        "outputId": "c149ae5f-153d-47ef-8e05-dffa4cb988a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<strong>mean:</strong> 3.20594367796912"
+            ],
+            "text/markdown": "**mean:** 3.20594367796912",
+            "text/latex": "\\textbf{mean:} 3.20594367796912",
+            "text/plain": [
+              "    mean \n",
+              "3.205944 "
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "v2 <- c(3, 7, 1, NA, 8, 12)\n",
         "ttest_fun(v2)"
@@ -209,15 +297,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "scrolled": true,
         "vscode": {
           "languageId": "r"
         },
-        "id": "D86lC3bNOL0R"
+        "id": "D86lC3bNOL0R",
+        "outputId": "65cc1615-7f6c-47c8-ddfd-dd79811dbee6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 213
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\n",
+              "\tOne Sample t-test\n",
+              "\n",
+              "data:  v2\n",
+              "t = 3.2059, df = 4, p-value = 0.03272\n",
+              "alternative hypothesis: true mean is not equal to 0\n",
+              "95 percent confidence interval:\n",
+              "  0.8306107 11.5693893\n",
+              "sample estimates:\n",
+              "mean of x \n",
+              "      6.2 \n"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "t.test(v2)"
       ]
